# dotfiles

./: .gitignore  .gitmodules  .prettierrc.json  Cargo.toml  README.md  README.zh-cn.md  README.zh-hans.md  config-sync.toml  confsync  install.sh  pyproject.toml  requirements.txt  sync.sh  user  xdm.yaml
config/: .gitconfig  starship.toml
config/MangoHud/: MangoHud.conf
config/bash/: .bash_profile  .bashrc  bash_profile  bashrc  env.bash  load_config.bash  proxy.sh
config/bspwm/: bspwmrc
config/dunst/: dunstrc
config/environment.d/: 50-dotfiles.conf
config/environments/: dotfilesenv.bash
config/fastfetch/: 0.jsonc  2.jsonc  config-icon-only.jsonc  config.jsonc
config/fcitx5/: config  profile
config/fish/: config.fish  env.fish  fish_variables
config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
config/i3/: config
config/kde/: kactivitymanagerdrc  kcminputrc  kdeglobals  kglobalshortcutsrc  krunnerrc  kscreenlockerrc  kwinrc  kwinrulesrc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  plasmashellrc  yakuakerc
config/kitty/: kitty.conf
config/mpv/: mpv.conf
config/neofetch/: config.conf  config2.conf
config/nvim/: README.md  (+3 more)
docs/: README.zh-hans.md
fakehome/: install.sh  install_for_system.sh  sync.sh  uninstall.sh  uninstall_for_system.sh
scripts/: copytext.sh
systemd/: boot-script.service  clash-for-linux.service
user/: .bash_profile  .bashrc  .gitconfig  .xinitrc
utils/: collectconf  collectconf.fish  loadconf.py
xdgenv/: alias.bash  alias.fish  env.bash  env.fish
xdgfix/: uninstall.sh  xdgfix.bash  xdgfix.fish
(+473 files in other folders)
