[project]
name = "dotfiles"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "hmeqo", email = "hmeqocoliniliad@gmail.com" }]
dependencies = ["simple-config-sync>=0.1.5"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
